# ai-agent-study

./: .gitignore  README.md
archive/ai_agent/: README.md
archive/langchain_rag/: README.md
archive/langchain_rag/study/20250822_rag_ch1-4/: RAG란 무엇인가.md  uv를 사용한 LangChain 개발환경 구축.md
archive/langchain_rag/study/20251017_rag_ch12/: _03_Perf.md  (+3 more)
example/Autogen/: 간단한_Q&A_에이전트_생성하기.ipynb  두_개_이상의_AssistantAgent_생성하기.ipynb
study/20250425_grpc_mcp/gRPCGEMServer2/: My_GEM_gRPC_Service.cs  Program.cs  fmMain.Designer.cs  fmMain.cs  gRPCGEMServer2.csproj
study/20250509_ch3+4+5/: ch3_AI에이전트의개념_kim.md  ch4_AI에이전트구성및동작방식_kim.md
study/20250516_nocode_ai_agent/: Flowise AI 워크플로우 소개_judy.md
study/20250530_langgraph_langchain/langchain_나명진/: 02_hello_langchain.py
study/20250530_langgraph_langchain/langgraph_rag/: conditional_edge.mmd  embeddings.py  graph_2.mmd  main.py  memory_store.json  tavily_splitter.py
study/20250613_playwright_mcp/0613_judy/: package-lock.json  playwright.config.ts
study/20250905_rag_ch7/: 01-hello_gemini.ipynb  02-cache.ipynb  04-TokenUsage.ipynb
study/20251017_rag_ch12/: README.md  _00_ReadMe.md  _01_VectorStoreCompare.md  main.py  movies_sample_data_10.sql  pyproject.toml
study/20251017_rag_ch12/09-VectorStore/: 07-Milvus.ipynb  chroma.py
study/20251017_rag_ch12/09-VectorStore/chroma_db/: chroma.sqlite3
study/20251017_rag_ch12/09-VectorStore/qdrant_db/: meta.json
study/20251128_rag_ch15/: email_bot.ipynb  serpapi.ipynb  summary_bot.ipynb
study/20251128_rag_ch15/test_app/: app.py
study/20260306_rag_pipeline/: RAPTOR_BOOK.ipynb
(+65 files in other folders)
