[project]
name = "vectordb"
version = "0.1.0"
description = "Vector Database Study Project with Chroma, FAISS, and Pinecone"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.4.0",
    "faiss-cpu>=1.7.0",
    "pinecone-client>=2.2.0",
    "openai>=1.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.1.0",
    "python-dotenv>=1.0.0",
    "jupyter>=1.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "sentence-transformers>=2.2.0",
    "langchain-teddynote>=0.5.1",
    "langchain-chroma>=0.2.6",
    "datasets>=4.2.0",
    "matplotlib>=3.10.7",
    "langchain-experimental>=0.3.4",
    "open-clip-torch>=3.2.0",
    "qdrant-client>=1.15.1",
    "langchain-qdrant>=0.2.1",
    "psycopg2-binary>=2.9.11",
    "pgvector>=0.4.1",
    "scikit-learn>=1.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vectordb"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
